@@ -37,6 +37,7 @@ changes since wmaker 0.61.1:
 - new wsyserrorwithcode(int error, const char* fmt, ...), similar to 
   wsyserror(), but printing the message for the specified error code.
 - added 3 new classes: WMData, WMHost and WMConnection
+- fixed a big memory leak in the color panel code (from Pascal Hofstee).
 
 changes since wmaker 0.61.0:
 ............................
